export class Channel {


}